--- a/common-collections/Cargo.toml
+++ b/common-collections/Cargo.toml
@@ -10,3 +10,5 @@ simple_logger = "1.6.0"
 # Test dependencies
 mockall = "0.7.1"
 mockall_derive = "0.7.1"
+# Specify version to force removal of version within dependency tree for mockall
+regex = "1.5.6"
